ui_dsl/1.4/08_Client_Extensions.md
# 08. Client Extensions

**Profile:** Client Profile. Core-only runtimes MAY skip this section; a runtime that advertises the Client Profile MUST satisfy [`18_Conformance.md`](18_Conformance.md) §18.3.
**Since:** v1.1.

## 8.1 Overview

The Client Profile extends the Core DSL with capabilities that execute in the client's local environment rather than on the MCP server:

- File system operations (read, write, pick, enumerate)
- HTTP requests issued from the client
- System information, clipboard, shell execution, and native notifications
- Client-side local storage
- The `client://` resource protocol
- Bidirectional real-time channels
- Client-side data bindings (`client.*`, `channels.*`, `permissions.*`)
- A user-consented permission model with runtime revocation

Every operation in this section is permission-gated. A runtime MUST reject a `client.*` action or `channel.*` lifecycle call whose permission has not been granted.

## 8.2 Client Action Catalog

Canonical action type names are registered in [`17_Naming.md`](17_Naming.md) §17.2.2 (Client Profile). The count below matches that registry.

### 8.2.1 File Actions (5)

| Action | Permission | Purpose |
|--------|------------|---------|
| `client.selectFile` | `file.read` | Open a native file picker dialog |
| `client.readFile` | `file.read` | Read the contents of a file |
| `client.writeFile` | `file.write` | Write content to a file path |
| `client.saveFile` | `file.write` | Save-as dialog with content |
| `client.listFiles` | `file.read` | Enumerate a directory |

Example — open picker, forward result to a server tool:

```json
{
  "type": "button",
  "label": "Open File",
  "action": {
    "type": "client.selectFile",
    "params": {
      "title": "Select a configuration file",
      "filters": [
        {"name": "JSON Files", "extensions": ["json"]},
        {"name": "All Files", "extensions": ["*"]}
      ],
      "defaultPath": "{{client.workingDirectory}}",
      "multiple": false
    },
    "onSuccess": {
      "type": "tool",
      "tool": "process_file",
      "params": {
        "path": "{{event.path}}",
        "content": "{{event.content}}"
      }
    }
  }
}
```

Example — read a file with error handling:

```json
{
  "type": "button",
  "label": "Load Config",
  "action": {
    "type": "client.readFile",
    "params": { "path": "./config.json", "encoding": "utf-8" },
    "onSuccess": {
      "type": "tool",
      "tool": "parse_config",
      "params": { "content": "{{event.content}}" }
    },
    "onError": {
      "type": "notification",
      "params": {
        "message": "Failed to load config: {{event.error.message}}",
        "severity": "error"
      }
    }
  }
}
```

### 8.2.2 Network Actions (1)

| Action | Permission | Purpose |
|--------|------------|---------|
| `client.httpRequest` | `network.http` | Issue an HTTP request from the client |

```json
{
  "type": "button",
  "label": "Check for Updates",
  "action": {
    "type": "client.httpRequest",
    "params": {
      "url": "https://api.example.com/version",
      "method": "GET",
      "headers": {"Accept": "application/json"}
    },
    "onSuccess": {
      "type": "tool",
      "tool": "process_version",
      "params": {"response": "{{event.data}}"}
    }
  }
}
```

### 8.2.3 System Actions (4)

| Action | Permission | Purpose |
|--------|------------|---------|
| `client.getSystemInfo` | `system.info` | Return platform, architecture, memory, CPUs, hostname, etc. |
| `client.clipboard` | `system.info` (read) / `system.notification`-class grant (write) per runtime policy | Read or write the system clipboard |
| `client.exec` | `system.exec` | Execute a shell command (highest trust; MAY be refused) |
| `client.notification` | `system.notification` | Display a system-level (OS) notification, distinct from in-app `notification` |

```json
{
  "type": "button",
  "label": "Get System Info",
  "action": {
    "type": "client.getSystemInfo",
    "params": {"properties": ["platform", "arch", "memory", "cpus"]},
    "onSuccess": {
      "type": "tool",
      "tool": "analyze_system",
      "params": {"info": "{{event.data}}"}
    }
  }
}
```

```json
{
  "type": "client.notification",
  "params": {
    "title": "Download Complete",
    "body": "File has been saved to {{outputPath}}",
    "icon": "check_circle"
  }
}
```

`client.exec` is the most sensitive action in this profile. Runtimes MAY refuse it unconditionally and still claim Client Profile conformance (see [`18_Conformance.md`](18_Conformance.md) §18.3.2).

### 8.2.4 Storage Actions (3)

| Action | Permission | Purpose |
|--------|------------|---------|
| `client.storage.get` | implicit (app-scoped) | Read a key from client-local storage |
| `client.storage.set` | implicit (app-scoped) | Write a key to client-local storage |
| `client.storage.remove` | implicit (app-scoped) | Delete a key from client-local storage |

Storage is scoped per MCP server identity; cross-server reads are prohibited.

### 8.2.5 Unified Result Envelope

Every `client.*` action returns one of the two shapes below. Callbacks see the inner `data` fields promoted to `event.*`.

```json
{ "success": true, "data": { }, "timestamp": "2026-04-18T10:30:00Z" }
```

```json
{
  "success": false,
  "error": {
    "code": "PERMISSION_DENIED",
    "message": "Human-readable description",
    "details": {"permission": "file.read", "path": "/etc/shadow"}
  },
  "timestamp": "2026-04-18T10:30:00Z"
}
```

Common error codes: `PERMISSION_DENIED`, `CANCELED` (user-cancelled dialog), `NOT_FOUND`, `TIMEOUT`, `UNSUPPORTED`, `INVALID_PATH`.

## 8.3 `client://` Resource Protocol

The `client://` URI scheme exposes client-side resources declaratively (e.g., as `image.src` or as a `resource` action target).

**`client://` is the host's side of the wire, not the server's.** It reaches files the *client process* holds — the user's disk, the workspace, the app's cache. An asset the connected server holds is addressed by the `AssetRef` object form (`{uri, origin?}`, read via `resources/read`) or inlined as `data:`; see [`06_Runtime_Contract.md`](06_Runtime_Contract.md) §6.12. The distinction is a permission boundary, not a stylistic one: `client://file/…` spends the user's `file.read` grant, and a document that could reach the host's disk by naming a server resource would spend it without asking.

As an asset source, `client://` is **MAY** (§18.2.12) — a runtime with no filesystem is conformant without it, and a document that names it MUST degrade per §6.12.4 rather than fail.

### 8.3.1 URI Format

```
client://{type}/{path}[?{query}]
```

### 8.3.2 Resource Types

| Scheme | Root | Description |
|--------|------|-------------|
| `client://file/{path}` | System absolute path | Direct filesystem access (requires `file.read` / `file.write`) |
| `client://workspace/{path}` | Current working directory | Workspace-relative paths |
| `client://temp/{path}` | OS temp directory | Short-lived scratch files |
| `client://cache/{path}` | App cache directory | Cached data keyed by path |
| `client://asset/{path}` | App asset directory | Bundled assets shipped with the app |

### 8.3.3 Path Rules

- Forward slashes on all platforms; runtimes convert to native separators
- Path traversal segments (`..`) are rejected before permission evaluation
- Paths are normalized (`.` removed, `//` collapsed) before permission matching
- Symlinks are resolved to real paths and re-validated against the permission scope
- Case sensitivity follows the host filesystem (sensitive on Linux; insensitive on macOS/Windows)

### 8.3.4 Image and Fallback Integration

```json
{
  "type": "image",
  "src": "client://workspace/images/photo.jpg",
  "fallback": "client://asset/placeholder.png",
  "width": 200,
  "height": 200,
  "fit": "cover"
}
```

When a resource is unavailable, the runtime uses `fallback` if provided, otherwise renders a placeholder.

## 8.4 Permission System

### 8.4.1 Permission Categories (7)

| Category | Grants |
|----------|--------|
| `file.read` | `client.selectFile`, `client.readFile`, `client.listFiles`, reads via `client://file` / `client://workspace` |
| `file.write` | `client.writeFile`, `client.saveFile`, writes via `client://file` / `client://workspace` |
| `network.http` | `client.httpRequest`, HTTP-backed resources |
| `network.websocket` | WebSocket channels (`client.websocket`) |
| `system.info` | `client.getSystemInfo`, `client.env.*` binding reads |
| `system.exec` | `client.exec` |
| `system.notification` | `client.notification` |

### 8.4.2 Page-Level Permission Declaration

```json
{
  "type": "page",
  "permissions": {
    "file": {
      "read": {"paths": ["./config", "./data"], "extensions": ["json", "txt"]},
      "write": {"paths": ["./output"], "maxSize": "10MB"}
    },
    "network": {
      "http": {"domains": ["api.example.com", "*.mydomain.com"]}
    },
    "system": {
      "info": ["platform", "memory"],
      "exec": {"commands": ["ls", "cat", "echo"]}
    }
  }
}
```

### 8.4.3 Trust Levels (4)

| Level | Meaning |
|-------|---------|
| `untrusted` | No client actions permitted; display-only rendering |
| `basic` | Standard read capabilities (`file.read`, `network.http`, `system.info`) |
| `elevated` | Write capabilities (`file.write`, unrestricted-path file access) |
| `full` | All permissions including `system.exec` (development only) |

An application MAY declare a required `trustLevel`; escalating from a lower level requires an explicit user-consent prompt.

### 8.4.4 Permission Request Flow

1. **Declaration** — the page declares permissions it MAY use.
2. **Timing** — each declaration specifies `requestTiming`:

   | Timing | Description |
   |--------|-------------|
   | `upfront` | Requested on page load before user interaction |
   | `justInTime` | Requested when the first dependent action fires |
   | `contextual` | Requested with user-visible rationale at the moment the UI calls for it |

3. **Prompt** — the client presents a consent dialog with title, rationale, scope, and a persistence choice (`false` / `"session"` / `"permanent"` / `"duration"`).
4. **Decision** — the result is persisted per MCP server identity.
5. **Enforcement** — every `client.*` invocation re-checks the live grant; revoked or expired grants are treated as `PERMISSION_DENIED`.

### 8.4.5 Permission Status Binding

```json
{
  "type": "text",
  "text": "File access: {{permissions.file.read.status}}"
}
```

| Status | Meaning |
|--------|---------|
| `granted` | Active grant |
| `denied` | User explicitly denied |
| `pending` | Not yet requested |
| `revoked` | Previously granted, then revoked |
| `unavailable` | Feature not supported by the host |

### 8.4.6 Permission Revocation

Canonical shape:

```json
{
  "type": "permission",
  "action": "revoke",
  "permissions": ["file.read", "file.write"]
}
```

The legacy v1.1 shape `{"type": "permission.revoke", "permissions": [...]}` is accepted as an alias; see [`17_Naming.md`](17_Naming.md) §17.3.4. Revocation is immediate: in-flight operations depending on the revoked permission abort with `PERMISSION_DENIED`, and every `permissions.<name>.status` binding transitions to `revoked` in the same tick.

## 8.5 Client Data Bindings

All prefixes below appear in [`17_Naming.md`](17_Naming.md) §17.2.5 and resolve through the binding engine defined in [`03_Data_Binding.md`](03_Data_Binding.md).

| Binding | Content |
|---------|---------|
| `client.workingDirectory` | Current working directory (absolute path) |
| `client.userName` | Logged-in user name |
| `client.platform` | Device class the client belongs to: `mobile`, `desktop`, `web`, or `unknown`. **This is a class, not an OS name** — a document choosing between a touch layout and a pointer layout branches here. |
| `client.platform.os` | The operating system itself: `macos`, `linux`, `windows`, `ios`, `android`, `web`, or `unknown`. A document choosing a file path or an OS-specific affordance branches here. |
| `client.platform.category` | Alias of `client.platform`. |
| `client.isWeb` | `true` in a browser. Equivalent to `client.platform.os == "web"`, and answered from the same reading so the two cannot disagree. |
| `client.orientation` | `portrait` or `landscape`. |
| `client.network.status` / `client.network.type` | Connectivity state and transport. |
| `client.file.separator` | Path separator for the client filesystem (`/` in a browser). |
| `client.system.os` / `client.system.version` | OS name and version string. |
| `client.isDebug` / `client.isRelease` / `client.isProfile` | Which build this is. |
| `client.locale` | IETF BCP 47 locale tag (e.g., `en-US`) |
| `client.theme.*` | Host environment theme tokens — 11 slots matching the theme schema in [`05_Theme.md`](05_Theme.md) §5.3: `background`, `foreground`, `primary`, `secondary`, `surface`, `onSurface`, `error`, `success`, `warning`, `info`, `muted` |
| `client.env.*` | Environment variables — allowlist-restricted and requires `system.info` permission |
| `client.file.*` | File metadata populated by file actions (e.g., `client.file.lastSelected.path`) |
| `client.system.*` | System info populated by `client.getSystemInfo` results |
| `permissions.<category>.status` | Live permission grant status per §8.4.5 |
| `channels.<name>.*` | Channel state and latest payload (see §8.6.6) |

> **`client.platform` is a device class (2026-08-10).** Earlier text defined
> `client.platform` as the OS name. Every runtime and every document in the
> field reads it as the device *class* — it is what a layout branches on — and
> the OS name has been reachable as `client.platform.os` throughout. The table
> above records what is implemented; a document that needs the OS name asks for
> it by that name. Runtimes MUST answer both from one reading of the host, so
> `client.platform`, `client.platform.os` and `client.isWeb` cannot contradict
> each other.

Resolution follows the order in [`03_Data_Binding.md`](03_Data_Binding.md); `client.*` bindings read through to the runtime capability layer and are inert on non-Client-Profile runtimes (they resolve to `null`, never throwing).

## 8.6 Bidirectional Channels

Channels are long-lived bidirectional streams declared at the page or application level, controlled by lifecycle actions, and bound via `channels.*`.

> **Streaming vs the MCP transport (2026-07-19).** These §8.6 channels are
> **client-local** — `client.websocket` opens a raw socket to an *external*
> endpoint, `client.poll`/`watchDirectory`/`systemMonitor` run in-process. They
> do **not** ride the MCP server transport and are unaffected by MCP protocol
> revisions.
>
> To stream data **from a server tool/resource** over MCP, use the two standard
> primitives, not a non-standard flag: **enable** with a tool call
> (`tools/call` — a "streaming" tool the client invokes), and **deliver** via a
> reactive resource — `subscriptions/listen` (MCP 2026-07-28) or
> `resources/subscribe` → `notifications/resources/updated` (≤2025-11-25). The
> former makemind `CallToolResult.isStreaming` hint is **deprecated** (honored
> nowhere; retained for backward compatibility until the next major, removed
> thereafter). See the `mcp_server` package design notes on stateless coexistence, §11.

### 8.6.1 Channel Declaration

```json
{
  "type": "page",
  "channels": {
    "fileWatch": {
      "type": "client.watchFile",
      "params": { "path": "./config.json", "events": ["change", "rename", "delete"] }
    },
    "systemMonitor": {
      "type": "client.systemMonitor",
      "params": { "metrics": ["cpu", "memory"], "interval": 1000 }
    }
  }
}
```

ChannelDefinition fields:

| Field | Type | Required | Since | Description |
|-------|------|:--------:|:-----:|-------------|
| `type` | string | yes | v1.0 | Channel type — one of the values listed in §8.6.2 (e.g. `client.watchFile`, `client.poll`). |
| `params` | object | no | v1.0 | Type-specific parameters per §8.6.2 (e.g. `{ path, events }` for `client.watchFile`). |
| `url` | string | no | v1.0 | Endpoint URL for transport-style channels (`client.websocket` etc.). |
| `tool` | string | no | v1.0 | MCP tool name to invoke when the channel kind dispatches via tool call (e.g. `client.poll` driving a server tool). |
| `binding` | string | no | v1.0 | Override for where the latest payload binds. Default is `channels.<name>`; setting `binding` redirects to a custom path. |
| `lifecycle` | ChannelLifecycle | no | v1.0 | Lifecycle config — see §8.6.5. |
| `onMessage` / `onError` / `onConnect` / `onDisconnect` | Action | no | v1.0 | Callbacks — see §8.6.4. |

### 8.6.2 Channel Types

| Type | Purpose | Key Parameters |
|------|---------|----------------|
| `client.watchFile` | Watch a file for changes | `path`, `events[]` |
| `client.watchDirectory` | Watch a directory tree | `path`, `pattern`, `recursive`, `events[]` |
| `client.systemMonitor` | Stream system metrics | `metrics[]`, `interval` |
| `client.poll` | Periodic invocation of an action | `action`, `interval` |
| `client.websocket` | Raw WebSocket connection | `url`, `protocols[]`, `headers` |
| `client.mcpStream` *(since v1.3)* | Subscribe to a host-registered MCP stream source and forward every server push as a channel message | `uri`, `params` |

#### `client.mcpStream` *(since v1.3)*

The other five channel types cannot carry an MCP-server-**initiated** live
stream: `client.poll` has the client re-invoke a tool on an interval (pull, not
push) and `client.websocket` is a raw socket outside MCP. `client.mcpStream`
fills that gap — it subscribes to a host-registered stream source identified by
`uri` and delivers each push through the normal channel machinery (lifecycle,
backpressure, `onMessage`/`onError`/`onConnect`/`onDisconnect`).

| Parameter | Type | Description |
|-----------|------|-------------|
| `uri` | string | Stream-source URI. The **scheme** selects the host-registered source (e.g. `ble://scan`, `sensor://imu`); the remainder is source-specific. |
| `params` | object | Subscribe arguments forwarded to the source (e.g. a filter `{ "minRssi": -70 }`). |

The runtime stays transport-agnostic: a host registers a source per scheme
(`registerStreamSource(scheme, open)` in the Flutter runtime), and the runtime
never learns what a given scheme streams. `onMessage` fires once per push with
the payload bound as the `data` context variable (the runtime's uniform channel
onData contract — the same variable `client.poll` and the other channel types
deliver through); a bundle accumulates those into state and binds a `list`/chart
to render live. `channel.stop` unsubscribes — a ref-counted source (one physical
stream fanned out to many subscriptions) powers down when its last subscriber
stops.

The channel declares its source and its per-push handler; buttons only start /
stop it:

```json
{
  "channels": {
    "advertisements": {
      "type": "client.mcpStream",
      "params": { "uri": "ble://scan", "params": { "minRssi": -70 } },
      "onMessage": {
        "type": "state", "action": "append",
        "binding": "advertisements", "value": "{{data}}"
      }
    }
  }
}
```

### 8.6.3 Channel Lifecycle Actions

Canonical shape — `type: "channel"`, `action: "<lifecycle>"`:

```json
{
  "type": "button",
  "label": "Start Monitoring",
  "action": {
    "type": "channel",
    "action": "channel.start",
    "channel": "systemMonitor"
  }
}
```

```json
{
  "type": "button",
  "label": "Stop Monitoring",
  "action": {
    "type": "channel",
    "action": "channel.stop",
    "channel": "systemMonitor"
  }
}
```

```json
{
  "type": "button",
  "label": "Toggle",
  "action": {
    "type": "channel",
    "action": "channel.toggle",
    "channel": "systemMonitor"
  }
}
```

```json
{
  "type": "channel",
  "action": "channel.send",
  "channel": "dataStream",
  "payload": {"op": "subscribe", "topic": "price-updates"}
}
```

Sub-actions: `channel.start`, `channel.stop`, `channel.restart`, `channel.toggle`, `channel.send` (5). The legacy v1.1 shape `{"type": "channel.start", ...}` is accepted as an alias; see [`17_Naming.md`](17_Naming.md) §17.3.4 for the full alias table.

### 8.6.4 Channel Callbacks

Channel lifecycle actions accept four callback properties. All four MUST be supported by a Client-Profile runtime ([`18_Conformance.md`](18_Conformance.md) §18.3.4):

| Callback | Fires when |
|----------|-----------|
| `onMessage` | A payload arrives from the channel (primary data path) |
| `onError` | The channel reports an error (transport or protocol) |
| `onConnect` | The channel transitions to `connected` |
| `onDisconnect` | The channel transitions to `disconnected` (graceful or error-driven) |

```json
{
  "type": "channel",
  "action": "channel.start",
  "channel": "liveData",
  "onConnect": {
    "type": "state", "action": "set",
    "binding": "status", "value": "live"
  },
  "onMessage": {
    "type": "state", "action": "set",
    "binding": "latestTick", "value": "{{event.payload}}"
  },
  "onDisconnect": {
    "type": "state", "action": "set",
    "binding": "status", "value": "offline"
  },
  "onError": {
    "type": "notification",
    "params": {"message": "{{event.error.message}}", "severity": "warning"}
  }
}
```

Callback bodies receive `event.*` populated from the channel message envelope (§8.6.7).

### 8.6.5 Channel Lifecycle Configuration

```json
{
  "channels": {
    "dataStream": {
      "type": "client.websocket",
      "url": "wss://stream.example.com/data",
      "lifecycle": {
        "autoStart": true,
        "autoDispose": false,
        "restartOnError": true,
        "maxRestarts": 5,
        "restartDelay": 1000,
        "restartBackoff": "exponential"
      }
    }
  }
}
```

| Property | Default | Description |
|----------|---------|-------------|
| `autoStart` | `false` | Start when the page loads |
| `autoDispose` | `false` | Opt-in: stop and release the channel when the declaring page unmounts. When `false` (default) the channel persists for the connection's lifetime and can only be ended with an explicit `channel.stop`, `channel.restart` cycle, or MCP connection close. |
| `restartOnError` | `false` | Auto-restart on error |
| `maxRestarts` | `3` | Cap on automatic restarts |
| `restartDelay` | `1000` | Initial delay between restarts (ms) |
| `restartBackoff` | `"fixed"` | One of `fixed`, `linear`, `exponential` |

Connection states a channel transitions through: `connecting`, `connected`, `disconnected`, `reconnecting`, `failed`, `stopped`. Each is observable via `channels.<name>.state`.

Default lifecycle summary: a channel is connection-scoped — it survives page navigation and is torn down only by explicit stop or connection close. Set `autoDispose: true` when the channel should be bound to a single page and cleaned up when the page leaves the tree.

### 8.6.6 Channel Bindings

| Binding | Content |
|---------|---------|
| `channels.<name>.state` | Connection state (`connecting` / `connected` / ...) |
| `channels.<name>.active` | `true` when state is `connected` or `reconnecting` |
| `channels.<name>.<field>` | Latest message payload fields (e.g., `channels.systemMonitor.cpu`) |
| `channels.<name>.lastMessage` | The full latest message envelope |
| `channels.<name>.error` | The last error object, if any |

```json
{
  "type": "text",
  "text": "CPU Usage: {{channels.systemMonitor.cpu}}%"
}
```

### 8.6.7 Message Envelope

Messages exchanged over a channel use a structured envelope:

```json
{
  "type": "channel.message",
  "id": "msg-uuid-001",
  "channel": "dataStream",
  "direction": "client-to-server",
  "payload": {"op": "subscribe", "topic": "price-updates"},
  "timestamp": "2026-04-18T10:30:00.000Z",
  "sequence": 42
}
```

| Field | Description |
|-------|-------------|
| `type` | `channel.message`, `channel.control`, or `channel.error` |
| `id` | Unique message identifier |
| `channel` | Declared channel name |
| `direction` | `client-to-server` or `server-to-client` |
| `payload` | Arbitrary application data |
| `timestamp` | ISO 8601 send time |
| `sequence` | Monotonic per-channel sequence number |

## 8.7 Permission Revocation at Runtime

Revocation is a first-class action so servers and user interfaces can offer an explicit "disconnect" affordance:

```json
{
  "type": "button",
  "label": "Revoke File Access",
  "action": {
    "type": "permission",
    "action": "revoke",
    "permissions": ["file.read", "file.write"],
    "onComplete": {
      "type": "notification",
      "params": {
        "message": "File access permissions revoked",
        "severity": "info"
      }
    }
  }
}
```

Revocation semantics:

1. Stored grants for the listed permissions are cleared for the current MCP server identity.
2. In-flight `client.*` operations bound to those permissions abort with `PERMISSION_DENIED`.
3. Active channels whose declared type requires a revoked permission (e.g., `client.watchFile` under `file.read`) transition to `stopped`; their `onDisconnect` callback fires.
4. `permissions.<name>.status` bindings update to `revoked` in the same state tick that the action resolves.
5. Re-requesting a revoked permission follows the normal request flow (§8.4.4); previous persistence choices do not survive a revoke.

## 8.8 Cross-Origin Scope *(since v1.4, Composition Profile)*

§8.4 (Permission System), §8.3 (`client://` storage), and §8.7 (revocation) are all written against **"the current MCP server identity"**. v1.4 lets one document render definitions from several origins ([`01_Core_Concepts.md`](01_Core_Concepts.md) §1.9). This section states how those rules apply when more than one identity is in play.

**The existing rules are unchanged.** They are not rewritten to be plural. Instead, each embedded scope carries its own server identity, and every rule in §8.3 / §8.4 / §8.7 applies within that scope exactly as written. In particular, *"Storage is scoped per MCP server identity; cross-server reads are prohibited"* (§8.3) remains literally true — there are simply several scopes alive at once, none of which can read another's.

### 8.8.1 What is keyed to which identity

| Concern | Identity used |
|---------|---------------|
| `client://` storage namespace | The **embedded** scope's origin. |
| Permission grants and their persistence | The **embedded** scope's origin. |
| Permission revocation (§8.7) | Revokes for one origin; other origins in the same document are unaffected. |
| Channel permissions (§8.6) | The origin of the scope that declared the channel. |
| `tool` / resource dispatch | The ambient origin of the enclosing scope ([`01_Core_Concepts.md`](01_Core_Concepts.md) §1.9.5). |

### 8.8.2 Effective permissions are an intersection

For an embedded scope with origin *O*:

```
effective(O) = granted(embedder → O)  ∩  requested(embedded definition)
```

Embedding never elevates. A definition that would prompt for `file.write` when run standalone does not receive it because its embedder holds it; the embedder's grant toward *O* bounds it from above, and the definition's own declaration bounds it from below.

A host MAY prompt the user per origin on first composition, exactly as it prompts on first standalone use.

### 8.8.3 Explicit cross-scope actions

An action MAY carry an explicit `origin` to dispatch outside its ambient scope. This is a distinct capability, **denied by default**, and a runtime that does not implement it MUST reject the action rather than dispatch it to the ambient origin. It exists for deliberate orchestration (a controller view acting on a sensor); it is not the normal path, which is §1.9.5's ambient scoping.

### 8.8.4 Declaring the need

A document that composes origins needs no new declaration in this specification. It reaches other origins through the host's outbound MCP client tool surface ([`06_Runtime_Contract.md`](06_Runtime_Contract.md) §6.11.1), and hosts already gate that surface through their existing capability-declaration mechanism. Adding a parallel declaration here would duplicate a contract that already exists.

---

## 8.9 Entry & Identity *(since v1.4)*

A definition is frequently reached from **outside** the app: a scanned code, a tag, a link. The host resolves that entry and opens the definition at a page, sometimes with a person signed in and sometimes not. This section defines what the definition may read about how it was entered, and the one thing it may ask the host to change.

The entry mechanism itself — link form, resolution, custody of the scanned medium — is a host and platform concern, not a document concern. A document only consumes the result.

### 8.9.1 What a document may assume

Two things, and no more:

- **It may have been entered from somewhere.** `entry.*` describes that arrival. On a definition opened normally (a launcher tile, a navigation action) the whole tree is absent.
- **A viewer may or may not be identified.** `identity.*` describes the current principal, which is `guest` when nobody signed in.

A document MUST render usefully with `identity.state == "guest"`. Requiring identification is the host's decision, taken before the definition renders; a definition that renders only for a signed-in viewer has moved a host policy into a layout.

### 8.9.2 Bindings

All read-only. Absent values resolve to `null` and never throw, exactly like §8.5.

| Binding | Content |
|---------|---------|
| `identity.state` | `guest` · `identified` |
| `identity.subject.kind` | `guest` · `user` · `tenant` · `service` |
| `identity.subject.ref` | Opaque reference to the current principal, stable for that principal |
| `identity.canPromote` | `true` when the host can offer sign-in here |
| `entry.route` | The route this entry resolved to |
| `entry.params.*` | Parameters carried by the entry |
| `entry.issuer.name` · `entry.issuer.verified` | Who stands behind the scanned medium |
| `entry.grant.scope` | What this entry is permitted to attempt (string list) |
| `entry.canSteward` | `true` when the current principal may manage the medium |
| `entry.notice` | `{ kind, message }` disclosure supplied by the host, when present |

`entry.params` is **not** `route.params`. Route parameters say where in the document the viewer is; entry parameters say what was scanned to get here, and they survive internal navigation that changes the route. A document that reads one where it means the other loses its context on the first `navigation.push`.

`entry.params` values are **untrusted input**. They arrive from outside the document and MUST NOT be treated as authority — see §8.9.5.

`identity.subject.kind` exists so one document serves people, organizations, and machines without forking. It is descriptive, not permissive: a document that wants to know whether *this* viewer may manage *this* medium reads `entry.canSteward`, which the host answers, rather than inferring it from the subject kind.

### 8.9.3 Actions

| Action | Effect |
|--------|--------|
| `identity.promote` | Ask the host to identify the current viewer. No-op when `identity.canPromote` is `false` |
| `identity.release` | Return to `guest`, or end the session when the host requires identification |

Neither action takes credentials, and neither returns any. The result reports `outcome` from a closed vocabulary, plus `changed` and the resulting `state`:

| `outcome` | meaning | offering again is |
|---|---|---|
| `promoted` | the principal changed | — |
| `declined` | the viewer was asked and said no | reasonable |
| `unavailable` | this host cannot identify anyone here | not |
| `failed` | the attempt broke | a host decision |

A document that cannot tell `declined` from `unavailable` cannot phrase either honestly — one invites a second try, the other must stop asking. A failure's reason stays with the host: the message belongs to whoever knows what broke.

```json
{
  "type": "button",
  "label": "Sign in to manage",
  "visible": "{{identity.canPromote}}",
  "action": { "type": "identity.promote" }
}
```

### 8.9.4 Reactivity

Identity can change **while the document is mounted**. When it does, a runtime MUST re-evaluate `identity.*` and `entry.*` bindings in place. The document is not rebuilt from scratch, its state is not discarded, and no lifecycle hook is required for the transition — a declarative surface expresses the difference as bindings.

A document MAY additionally observe the change through its normal state-driven mechanisms; it MUST NOT depend on an event to stay correct.

### 8.9.5 These bindings are not authority

`identity.*` and `entry.*` decide what a screen **offers**. They decide nothing about what the system **permits**.

Every privileged operation is authorized where it executes — at the serving origin, against the credential on the connection. A document that guards a capability with `visible` or `enabled` has built an affordance, not a control: the same tool call dispatched by other means is refused by the origin or it was never protected at all.

This mirrors §8.4's separation of a permission prompt from the capability behind it.

### 8.9.6 Inert without host support

A runtime that does not implement this section resolves every binding above to `null` and treats both actions as unsupported (§8.2.5 `unsupported`). A document written against §8.9 therefore degrades to its guest rendering rather than failing, which is the same rendering it must already provide.
